# PerformanceEvaluation

./: .gitignore  README.md
PI/: .gitignore  Makefile  analyseRez.rb  runner.sh  runnerPara.sh  runnerSeq.sh  uniformize.rb
PI/C/: processing.h  pthread_pi  pthread_pi.c  sequantial_pi.c
PI/CPP/: CMakeLists.txt  README.md  multithread.cpp  preprocessing.cpp  preprocessing.hpp  singlethread.cpp
PI/Go/gofast_pi/: gofast_pi  gofast_pi.go
PI/Go/processing/: processing.go
PI/Go/sequential_pi/: sequential_pi  sequential_pi.go
PI/Java/: pom.xml
PI/Projet_Python/: main.py  main_parallel.py
PI/Ruby/: rbPi_par.rb  rbPi_seq.rb  rbPi_seqStream.rb
PI/Rust/parallel_pi/: Cargo.toml
PI/Rust/sequential_pi/: Cargo.toml
PI/data/: CPPBoost.csv  CPPBoost_uniformized.csv  CPPSeq.csv  CPPSeq_uniformized.csv  GoPara.csv  GoPara_uniformized.csv  GoSeq.csv  GoSeq_uniformized.csv  cPThread.csv  cPThread_uniformized.csv  javaPara.csv  javaParaStream.csv  javaParaStream_uniformized.csv  javaPara_uniformized.csv  javaSeq.csv  javaSeqStream.csv  javaSeqStream_uniformized.csv  javaSeq_uniformized.csv  pyPara.csv  pyPara_uniformized.csv  pySeq.csv  pySeq_uniformized.csv  rbPar.csv  rbPar_uniformized.csv  rbSeq.csv  rbSeqStream.csv  rbSeqStream_uniformized.csv  rbSeq_uniformized.csv  rustPara.csv  rustPara_uniformized.csv  rustSeq.csv  rustSeq_uniformized.csv
Sort/: Makefile  analyseRez.rb  runner.sh  runnerSeq.sh  uniformize.rb
Sort/CPP/: CMakeLists.txt  README.md  block_indirect_sort.cpp  parallel_stable_sort.cpp  preprocessing.cpp  preprocessing.hpp  sample_sort.cpp  singlethread.cpp
Sort/Java/: README.md  pom.xml
Sort/Python/: sortPara.py  sortSeq.py
Sort/Ruby/: sortSeq.rb
Sort/data/: CPPBlock.csv  CPPBlock_uniformized.csv  CPPPara.csv  CPPPara_uniformized.csv  CPPSample.csv  CPPSample_uniformized.csv  CPPSeq.csv  CPPSeq_uniformized.csv  GoSeq.csv  GoSeq_uniformized.csv  javaNonPara.csv  javaNonPara_uniformized.csv  javaPara.csv  javaPara_uniformized.csv  pyPara.csv  pyPara_uniformized.csv  pySeq.csv  pySeq_uniformized.csv  rbSeq.csv  rbSeq_uniformized.csv  rustSeq.csv  rustSeq_uniformized.csv
tools/: uniformize.rb  uniformize_pi.rb
(+14 files in other folders)
